Combining front and back end maybe

--- a/reader/reader.html
+++ b/reader/reader.html
@@ -64,7 +64,11 @@ title, author, scrollable reading column, paragraph block-->
                 <!-- paragraphs go here -->
             </div>
         </div>
-
+        <!-- Explanation Button -->
+        <button id="explanation-button"
+            class="hidden fixed bg-gray-100 text-gray-700 px-2 py-1 rounded-md text-xs border border-gray-300">
+            Explain the text
+        </button>
         <script src="reader.js"></script>
     </body>
 
