fixed backend server connection

--- a/reader/reader.html
+++ b/reader/reader.html
@@ -37,6 +37,7 @@ title, author, scrollable reading column, paragraph block-->
                 <option value="spanish">Spanish</option>
                 <option value="german">German</option>
                 <option value="italian">Italian</option>
+                <option value="chinese">Chinese</option>
             </select>
 
             <button id="language-next" class="bg-blue-600 text-white px-4 py-2 rounded">
