--- a/reader/reader.html
+++ b/reader/reader.html
@@ -23,57 +23,23 @@ title, author, scrollable reading column, paragraph block-->
 </head>
 
 <body class="bg-gray-100">
+    <!-- READER -->
+    <div class="max-w-3xl mx-auto px-6 py-10 bg-white min-h-screen">
+        <h1 id="book-title" class="text-3xl font-serif mb-2"></h1>
+        <p id="book-author" class="text-gray-500 mb-8"></p>
 
-    <body class="bg-gray-100">
-
-        <!-- LANGUAGE SELECT -->
-        <div id="language-screen" class="max-w-xl mx-auto mt-20 bg-white p-6 rounded shadow">
-            <h2 class="text-2xl font-bold mb-4">Choose a language</h2>
-
-            <select id="language-select" class="w-full p-2 border rounded mb-4">
-                <option value="">Select a language</option>
-                <option value="russian">Russian</option>
-                <option value="french">French</option>
-                <option value="spanish">Spanish</option>
-                <option value="german">German</option>
-                <option value="italian">Italian</option>
-                <option value="chinese">Chinese</option>
-            </select>
-
-            <button id="language-next" class="bg-blue-600 text-white px-4 py-2 rounded">
-                Next
-            </button>
+        <div id="reader" class="space-y-6">
+            <!-- paragraphs go here -->
         </div>
+    </div>
 
-        <!-- BOOK SELECT -->
-        <div id="book-screen" class="hidden max-w-xl mx-auto mt-20 bg-white p-6 rounded shadow">
-            <h2 class="text-2xl font-bold mb-4">Choose a book</h2>
+    <!-- Explanation Button -->
+    <button id="explanation-button"
+        class="hidden fixed bg-gray-100 text-gray-700 px-2 py-1 rounded-md text-xs border border-gray-300">
+        Explain the text
+    </button>
 
-            <ul id="book-list" class="space-y-3"></ul>
-
-            <button id="book-back" class="mt-4 text-blue-600 underline">
-                Back
-            </button>
-        </div>
-
-        <!-- READER -->
-        <div id="reader-screen" class="hidden max-w-3xl mx-auto px-6 py-10 bg-white min-h-screen">
-            <h1 id="book-title" class="text-3xl font-serif mb-2"></h1>
-            <p id="book-author" class="text-gray-500 mb-8"></p>
-
-            <div id="reader" class="space-y-6">
-                <!-- paragraphs go here -->
-            </div>
-        </div>
-        <!-- Explanation Button -->
-        <button id="explanation-button"
-            class="hidden fixed bg-gray-100 text-gray-700 px-2 py-1 rounded-md text-xs border border-gray-300">
-            Explain the text
-        </button>
-        <script src="reader.js"></script>
-    </body>
-
-
+    <script src="reader-page.js"></script>
 </body>
 
 </html>
