--- a/reader/reader.html
+++ b/reader/reader.html
@@ -32,6 +32,7 @@ title, author, scrollable reading column, paragraph block-->
 
             <select id="language-select" class="w-full p-2 border rounded mb-4">
                 <option value="">Select a language</option>
+                <option value="english">English</option>
                 <option value="russian">Russian</option>
                 <option value="french">French</option>
                 <option value="spanish">Spanish</option>
@@ -70,7 +71,7 @@ title, author, scrollable reading column, paragraph block-->
             class="hidden fixed bg-gray-100 text-gray-700 px-2 py-1 rounded-md text-xs border border-gray-300">
             Explain the text
         </button>
-        <script src="reader.js"></script>
+        <script src="/static/reader.js"></script>
     </body>
 
 
