--- a/reader/reader.html
+++ b/reader/reader.html
@@ -7,6 +7,18 @@
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
+
+    <style>
+    /* Ensure Tailwind utilities work with fixed positioning */
+    #explanation-modal {
+        animation: fadeIn 0.2s ease-in;
+    }
+    
+    @keyframes fadeIn {
+        from { opacity: 0; }
+        to { opacity: 1; }
+    }
+</style>
 </head>
 
 <body class="bg-gray-100">
