--- a/reader/index.html
+++ b/reader/index.html
@@ -2,31 +2,84 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Community Reader - Language Selection</title>
-    <!-- Tailwind CSS -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>Community Reader — Language Selection</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        html,
+        body {
+            height: 100%;
+        }
+
+        body {
+            font-family: 'Inter', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
+        }
+    </style>
 </head>
 
-<body class="bg-gray-100">
-    <!-- LANGUAGE SELECT -->
-    <div class="max-w-xl mx-auto mt-20 bg-white p-6 rounded shadow">
-        <h2 class="text-2xl font-bold mb-4">Choose a language</h2>
+<body class="bg-gradient-to-b from-yellow-500 via-yellow-400 to-yellow-300 min-h-screen flex items-center relative">
 
-        <select id="language-select" class="w-full p-2 border rounded mb-4">
-            <option value="">Select a language</option>
-            <option value="russian">Russian</option>
-            <option value="french">French</option>
-            <option value="spanish">Spanish</option>
-            <option value="german">German</option>
-            <option value="italian">Italian</option>
-            <option value="chinese">Chinese</option>
-        </select>
+    <main class="w-full max-w-6xl mx-auto p-6">
+        <!-- Page title placed above the panel -->
+        <h1 class="mx-auto text-center text-5xl md:text-6xl font-extrabold text-yellow-900 drop-shadow-lg"
+            style="font-family: 'Fredoka One', Inter, sans-serif; transform: translateY(-40px); z-index:20;">Book Hive
+        </h1>
 
-        <button id="language-next" class="bg-blue-600 text-white px-4 py-2 rounded">
-            Next
-        </button>
-    </div>
+        <!-- Outer lighter panel with rounded edges and subtle shadow (pastel yellow inside) -->
+        <div class="bg-yellow-100/90 rounded-2xl p-6 md:p-10 shadow-2xl ring-1 ring-white/20 mt-[-40px]">
+
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-6 items-start">
+
+                <!-- Left: White info card -->
+                <section class="bg-white rounded-xl p-6 md:p-8 shadow-lg">
+                    <h2 class="text-2xl md:text-3xl font-bold text-yellow-900 mb-2">Welcome to Book Hive</h2>
+                    <p class="text-gray-600">Explore public-domain books, highlight passages, and ask for explanations
+                        tailored to language learners. Join a collaborative reading experience with annotations and
+                        community insights.</p>
+
+                    <div class="mt-6 text-sm text-gray-500">
+                        <strong class="text-gray-700">How it works:</strong>
+                        <ul class="list-disc list-inside mt-2 space-y-1">
+                            <li>Select a language</li>
+                            <li>Choose a book</li>
+                            <li>Read, highlight, and ask questions</li>
+                        </ul>
+                    </div>
+                </section>
+
+                <!-- Right: Language selector card (aligned right) -->
+                <aside class="flex justify-end">
+                    <div class="w-full max-w-md bg-white/95 rounded-xl p-6 md:p-8 shadow-lg">
+                        <label for="language-select" class="block text-sm font-semibold text-gray-700">Choose a
+                            language</label>
+                        <select id="language-select" class="mt-3 w-full p-3 border border-gray-200 rounded-lg bg-white">
+                            <option value="">Select a language</option>
+                            <option value="russian">Russian</option>
+                            <option value="french">French</option>
+                            <option value="spanish">Spanish</option>
+                            <option value="german">German</option>
+                            <option value="italian">Italian</option>
+                            <option value="chinese">Chinese</option>
+                        </select>
+
+                        <div class="mt-6 flex justify-end">
+                            <button id="language-next"
+                                class="inline-flex items-center gap-2 bg-blue-700 hover:bg-blue-800 text-white font-semibold px-4 py-2 rounded-lg shadow">Next</button>
+                        </div>
+
+                        <p class="mt-4 text-xs text-gray-500">Tip: You can change your selection later from the book
+                            selection page.</p>
+                    </div>
+                </aside>
+
+            </div>
+        </div>
+    </main>
 
     <script src="language-select.js"></script>
 </body>
