--- a/reader/reader.html
+++ b/reader/reader.html
@@ -3,12 +3,23 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Community Reader</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
 
     <style>
+    html, body {
+        height: 100%;
+    }
+    body {
+        font-family: 'Inter', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
+    }
     /* Ensure Tailwind utilities work with fixed positioning */
     #explanation-modal {
         animation: fadeIn 0.2s ease-in;
@@ -21,7 +32,7 @@
 </style>
 </head>
 
-<body class="bg-gray-100">
+<body class="bg-gradient-to-b from-yellow-500 via-yellow-400 to-yellow-300 min-h-screen flex items-center relative">
 
     <!-- LANGUAGE SELECT -->
     <div id="language-screen" class="max-w-xl mx-auto mt-20 bg-white p-6 rounded shadow">
