--- a/reader/reader.html
+++ b/reader/reader.html
@@ -32,7 +32,7 @@
 </style>
 </head>
 
-<body class="bg-gradient-to-b from-yellow-500 via-yellow-400 to-yellow-300 min-h-screen flex items-center relative">
+<body class="bg-gradient-to-b from-yellow-500 via-yellow-400 to-yellow-300 min-h-screen relative">
 
     <!-- LANGUAGE SELECT -->
     <div id="language-screen" class="max-w-xl mx-auto mt-20 bg-white p-6 rounded shadow">
