--- a/reader/reader.html
+++ b/reader/reader.html
@@ -75,8 +75,10 @@
     </div>
 
     <!-- Explanation Button -->
-    <button id="explanation-button"
-        class="hidden fixed bg-gray-100 text-gray-700 px-2 py-1 rounded-md text-xs border border-gray-300">
+     <button
+    id="explanation-button"
+    class="hidden fixed z-50 bg-gray-100 text-gray-700 px-2 py-1 rounded-md text-xs border border-gray-300 shadow"
+    >
         Explain the text
     </button>
 
